Fixed layout shift on button hover

--- a/css/index.css
+++ b/css/index.css
@@ -42,6 +42,7 @@ a.new_win:hover
 {
 	background-color: var(--dark-red);
 	border: 0;
+	border-bottom: 2px solid rgba(0,0,0,.2);
 }
 
 /* Tables should show empty cells. */
